--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -15,7 +15,7 @@ body {
 /********* Header Styles *********/
 
 header h1 {
-  font-family: "Tahoma", Geneva, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   color:gray;
 }
 
@@ -25,6 +25,10 @@ ul {
   padding: 0;
   overflow: hidden;
   background-color:lightgray;
+}
+
+nav {
+  font-family: 'Montserrat', sans-serif;
 }
 
 nav li {
@@ -66,7 +70,7 @@ img {
 /********* Article Styles *********/
 
 h2 {
-  font-family: "Tahoma", Geneva, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   color:gray;
   padding-top: 40px;
 }
@@ -81,7 +85,7 @@ a:hover {
 }
 
 p {
-  font-family: "Georgia", serif;
+  font-family: 'Neuton', serif;
   color:lightslategray;
   padding: 8px 20px 20px
 }
