--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -2,20 +2,24 @@
 
 
 
-/********* Body Styles *********/
+
+/********* Body Styles & Global Styles *********/
+
+* {
+  margin: 0;
+  padding: 0;
+}
 
 body {
   background-color:whitesmoke;
+  font-family: 'Montserrat', sans-serif;
 }
-
-
 
 
 
 /********* Header Styles *********/
 
 header h1 {
-  font-family: 'Montserrat', sans-serif;
   color:gray;
 }
 
@@ -25,10 +29,6 @@ ul {
   padding: 0;
   overflow: hidden;
   background-color:lightgray;
-}
-
-nav {
-  font-family: 'Montserrat', sans-serif;
 }
 
 nav li {
