--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -40,13 +40,14 @@ body {
   padding: 0;
   overflow: hidden;
   background-color:lightgray;
+  height: 6.5vmin;
 }
 
 .header-nav li a {
   display: block;
   color:slategray;
   text-align:center;
-  padding: 18px 20px;
+  margin: 1.5em;
   letter-spacing: 0.15em;
   text-decoration: none;
 }
@@ -148,29 +149,27 @@ p {
 
 
 
-/********* Aside Styles *********/
-
-aside {
-  background-color: lightgray;
-  border: 2px solid lightslategray;
-}
-
-aside h3 {
-  font-family: 'Neuton', serif;
-  color:gray;
-  padding: 2px 10px 2px
-}
-
-aside p {
-  color: slategray;
-  padding: 2px 10px 2px
-}
-
-
 
 /********* Footer Styles *********/
 
 footer {
-    margin-left: 2px
     background-color:lightgray;
+    height: 6.5vmin;
+    width: 100%;
+    margin: 0 auto;
+    left: 0%
+    position: relative;
     }
+
+.follow {
+  width: 100%;
+  position: absolute;
+  text-align: center;
+  bottom: 20px;
+  display: in-line-block;
+}
+
+.follow a {
+  display: in-line-block;
+  margin-right: 1em;
+}
