--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -8,6 +8,7 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .clearfix:after {
@@ -60,12 +61,6 @@ body {
   float: left;
 }
  
-/*
-.link-projects {
-  clear: both;
-}
-*/
-
 .link-projects, .link-about, .link-home {
   float: right;
 }
@@ -107,14 +102,15 @@ body {
 
 
 
-/********* Article Styles *********/
+/********* Intro Article *********/
 
-.main-text {
+.intro {
   width: 100%;
 }
 
-.main-text p {
+.intro p {
   margin-top: 3em;
+  margin-bottom: 3em;
   font-family: 'Neuton', serif;
   color:lightslategray;
   font-size: 1.05em;
@@ -124,11 +120,71 @@ body {
 }
 
 
+/********* Photo Gallery Grid *********/
+
+/* Center website */
+.main {
+    max-width: 1000px;
+    margin: auto;
+}
 
 h2 {
-  color:gray;
-  padding-top: 40px;
+    margin: 1em;
+    font-size: 1.5em;
+    letter-spacing: 0.25em;
+    color:gray;
+    text-align: center;
 }
+
+.row {
+    margin: 8px -16px;
+}
+
+/* Add padding BETWEEN each column (if you want) */
+.row,
+.row > .column {
+    padding: 8px;
+}
+
+/* Create four equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 25%;
+}
+
+/* Clear floats after rows */ 
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Content */
+.content {
+    background-color: white;
+    padding: 10px;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media (max-width: 900px) {
+    .column {
+        width: 50%;
+    }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media (max-width: 600px) {
+    .column {
+        width: 100%;
+    }
+}
+
+
+/******* End ********/
+
+
+
+
 
 a {
   color:cadetblue;
@@ -171,4 +227,9 @@ footer .follow {
 .follow a {
   display: in-line-block;
   margin-right: 1em;
+  color:cadetblue;
+}
+
+.follow a:hover {
+  color: pink;
 }
