--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -101,7 +101,7 @@ body {
 .intro {
   width: 100%;
   margin-top: 3em;
-  margin-bottom: 3em;
+  margin-bottom: 5em;
 }
 
 .intro p {
@@ -135,6 +135,14 @@ h3 {
   color: cadetblue;
   font-size: 1em;
   padding-top: 0.5em;
+}
+
+h3 a {
+  text-decoration: none;
+}
+
+h3 a:hover {
+  color: pink;
 }
 
 .caption {
@@ -189,25 +197,22 @@ h3 {
 /******* End ********/
 
 
+/********* Experience Article *********/
 
-
-
-a {
-  color:cadetblue;
-  
+.exp {
+  width: 100%;
+  margin-top: 3em;
+  margin-bottom: 5em;
 }
 
-a:hover {
-    color: pink;
-}
-/*
-
-p {
+.exp p {
   font-family: 'Neuton', serif;
   color:lightslategray;
-  padding: 8px 20px 20px
+  font-size: 1.05em;
+  line-height: 125%;
+  padding: 0 8em;
+  text-align: center;
 }
-*/
 
 
 
