--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -14,6 +14,7 @@
 body {
   background-color:whitesmoke;
   font-family: 'Montserrat', sans-serif;
+  height: 100%;
 }
 
 
@@ -35,7 +36,7 @@ body {
   padding: 0;
   overflow: hidden;
   background-color:lightgray;
-  height: 6.5vmin;
+  height: 4em;
 }
 
 .headernav li a {
