--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -36,7 +36,7 @@ body {
   padding: 0;
   overflow: hidden;
   background-color:lightgray;
-  height: 4em;
+/*  height: 4em;*/
 }
 
 .headernav li a {
@@ -101,7 +101,7 @@ body {
 
 .intro {
   width: 100%;
-  margin-top: 3em;
+  margin-top: 4em;
   margin-bottom: 5em;
 }
 
@@ -109,15 +109,16 @@ body {
   font-family: 'Neuton', serif;
   color:lightslategray;
   font-size: 1.05em;
-  line-height: 125%;
+  line-height: 150%;
   padding: 0 8em;
   text-align: center;
 }
 
 
+
+
 /********* Photo Gallery Grid *********/
 
-/* Center website */
 .main {
   max-width: 1000px;
   margin: auto;
@@ -156,39 +157,33 @@ h3 a:hover {
     margin: 8px -16px;
 }
 
-/* Add padding BETWEEN each column (if you want) */
 .row,
 .row > .column {
     padding: 8px;
 }
 
-/* Create four equal columns that floats next to each other */
 .column {
     float: left;
     width: 25%;
 }
 
-/* Clear floats after rows */ 
 .row:after {
     content: "";
     display: table;
     clear: both;
 }
 
-/* Content */
 .content {
     background-color: white;
     padding: 10px;
 }
 
-/* Responsive layout - makes a two column-layout instead of four columns */
 @media (max-width: 900px) {
     .column {
         width: 50%;
     }
 }
 
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media (max-width: 600px) {
     .column {
         width: 100%;
@@ -196,7 +191,7 @@ h3 a:hover {
 }
 
 
-/******* End ********/
+
 
 
 /********* Experience Article *********/
@@ -211,10 +206,11 @@ h3 a:hover {
   font-family: 'Neuton', serif;
   color:lightslategray;
   font-size: 1.05em;
-  line-height: 125%;
+  line-height: 150%;
   padding: 0 8em;
   text-align: center;
 }
+
 
 
 
@@ -226,21 +222,21 @@ footer {
     margin: 0 auto;
     position: relative;
     background-color:lightgray;
-    height: 6.5vmin;
-    }
+    height: 5em;
+}
 
 footer .follow {
   width: 100%;
   position: absolute;
   text-align: center;
-  margin: 1.25em;
+  margin: 1.45em;
 /*  display: in-line-block;*/
 }
 
 .follow a {
   display: in-line-block;
   margin-right: 1em;
-  color:cadetblue;
+  color: cadetblue;
 }
 
 .follow a:hover {
