created new projects page

--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -125,6 +125,11 @@ body {
   margin-top: 2em;
 }
 
+.projects {
+  margin-top: 4em;
+  margin-bottom: 5em;
+}
+
 h2 {
   margin: 1.5em;
   font-size: 1.5em;
