--- a/styles/first-stylesheet.css
+++ b/styles/first-stylesheet.css
@@ -203,12 +203,42 @@ h3 a:hover {
 
 .exp p {
   font-family: 'Neuton', serif;
-  color:lightslategray;
+  color: lightslategray;
   font-size: 1.05em;
   line-height: 150%;
   padding: 0 8em;
   margin: 3em 0;
   text-align: center;
+}
+
+
+
+
+
+/********* About Article *********/
+
+.about {
+  width: 100%;
+  margin-top: 5em;
+  margin-bottom: 5em;
+}
+
+.about img {
+  float: left;
+  width: 20%;
+  border: solid 10px white; 
+  margin-left: 10em;
+}
+
+.about p {
+  font-family: 'Neuton', serif;
+  color: lightslategray;
+  font-size: 1.05em;
+  line-height: 150%;
+  margin: 5em 6em 5em 20em;
+  padding: 5em 8em 7em 8em;
+  text-align: center;
+  width: 75%;
 }
 
 
@@ -245,30 +275,3 @@ footer {
 }
 
 
-
-/*
-footer {
-    width: 100%;
-    margin: 0 auto;
-    position: relative;
-    background-color:lightgray;
-    height: 5em;
-}
-
-footer .follow {
-  width: 100%;
-  position: absolute;
-  text-align: center;
-  margin: 1.45em;
-  display: in-line-block;
-}
-
-.follow a {
-  display: in-line-block;
-  margin-right: 1em;
-  color: cadetblue;
-}
-
-.follow a:hover {
-  color: pink;
-}*/
